# Ball

./: CMakeLists.txt  Main.cpp  Main.cpp.autosave  app.pro  object_detector_19_04.svm
include/: AppearanceAnalyzer.h  BackGroundRemover.h  Dtracker.hpp  FrameReader.h  IOData.h  InitRectDrawer.h  KCFtrackmanager.hpp  MultiCameraTracker.h  ObjectDetector.h  ObjectUtils.h  RedLightDetector.h  Tracker.h  TrajectoryAnalyzer.h  connectCMS.h  globalSettings.h  kcf.hpp  xmlParser.h
src/: Dtracker.cpp  IOData.cpp  KCFtrackmanager.cpp  ObjectDetector.cpp  ObjectUtils.cpp  RedLightDetector.cpp  connectCMS.cpp  kcf.cpp
